--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,85 @@
+body{
+    font-family: "Montserrat";
+}
+
 #title{
     background-color: #ff4c68;
+    color: #FFFFFF;
 }
 
 h1{
     font-family: "Montserrat";
     font-weight: 900;
-    size: 3rem;
+    size: 3.5rem;
     line-height: 1.5;
 }
 
-font-family: 'Montserrat', sans-serif;
-font-family: 'Ubuntu', sans-serif;
+h2{
+
+}
+
+h3{
+    font-family: "Montserrat";
+    font-weight: 900;
+    line-height: 1.5rem; 
+}
+
+p{
+    color: #8f8f8f;
+}
+
+.container-fluid{
+    padding: 3% 15%;
+}
+
+/* Navigation Bar */
+
+.navbar{
+    padding: 0 0 4.5rem;
+}
+.navbar-brand{
+    font-family: "Ubuntu";
+    font-weight: bold;
+    font-size: 2.5rem;
+}
+
+.nav-item{
+    padding: 0 18px;
+}
+
+.nav-link{
+    font-size: 1.2rem;
+    font-family: "Montserrat";
+    font-weight: 100;
+}
+
+/*  Download Buttons */
+.download-button{
+    margin: 5% 3% 5% 0;
+}
+
+/* iPhone Image */
+.iphone{
+    width: 60%;
+    transform: rotate(25deg);
+}
+/* Features Section */
+
+#features{
+    padding: 7% 15%;
+}
+
+.feature-box{
+    text-align: center;
+    padding: 5%;
+}
+
+/* Icons */
+.icons{
+    color: #ef8172;
+    margin-bottom: 1rem;
+}
+
+.icons:hover{
+    color: #ff4c68;
+}
