Added slideshow compoment

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,10 @@ h1{
 }
 
 h2{
+    font-family: "Montserrat";
+    font-weight: 900;
+    font-size: 3rem;
+    line-height: 1.5;
 
 }
 
@@ -82,4 +86,34 @@ p{
 
 .icons:hover{
     color: #ff4c68;
+}
+
+/* Testimonial Section */
+
+#testimonials{
+    text-align: center;
+    background-color: #ef8172;
+    color: #FFFFFF;
+}
+
+.testimonial-image{
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+#press{
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-img{
+    width: 15%;
+    margin: 20px 20x 50px;
+
+}
+
+.carousel-item{
+    padding: 7% 15%;
 }
