--- a/css/styles.css
+++ b/css/styles.css
@@ -1,38 +1,51 @@
 body{
     font-family: "Montserrat";
+    text-align: center;
 }
 
-#title{
-    background-color: #ff4c68;
-    color: #FFFFFF;
-}
-
-h1{
+h1, h2, h3, h4, h5, h6{
     font-family: "Montserrat";
     font-weight: 900;
-    size: 3.5rem;
-    line-height: 1.5;
-}
-
-h2{
-    font-family: "Montserrat";
-    font-weight: 900;
-    font-size: 3rem;
-    line-height: 1.5;
-
-}
-
-h3{
-    font-family: "Montserrat";
-    font-weight: 900;
-    line-height: 1.5rem; 
 }
 
 p{
     color: #8f8f8f;
 }
 
+/* Heading Sections */
+.big-heading{
+    font-family: "Montserrat";
+    font-weight: 900;
+    size: 3.5rem;
+    line-height: 1.5;
+}
+
+.heading-section{
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+/* Containers */
 .container-fluid{
+    padding: 7% 15%;
+}
+
+/* Sections */
+.colored-section{
+    background-color: #ff4c68;
+    color: #FFFFFF;
+}
+
+.white-section{
+    background-color: #FFFFFF
+}
+
+/* Title Section */
+#title{
+    text-align: left;
+}
+
+#title .container-fluid{
     padding: 3% 15% 7%;
 }
 
@@ -88,15 +101,17 @@ p{
 /* Features Section */
 
 #features{
-    padding: 7% 15%;
     background-color: #FFFFFF;
     position: relative;
     z-index: 1;
 }
 
 .feature-box{
-    text-align: center;
     padding: 5%;
+}
+
+.feature-title{
+    line-height: 1.5rem; 
 }
 
 /* Icons */
@@ -112,9 +127,7 @@ p{
 /* Testimonial Section */
 
 #testimonials{
-    text-align: center;
     background-color: #ef8172;
-    color: #FFFFFF;
 }
 
 .testimonial-image{
@@ -123,15 +136,15 @@ p{
     margin: 20px;
 }
 
-.carousel-item{
-    padding: 7% 15%;
+.testimonial-text{
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 /* Press Section */
 
 #press{
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 }
 
@@ -145,7 +158,6 @@ p{
 /*Pricing Section*/
 #pricing{
     padding: 100px;
-    text-align: center;
 }
 
 .price-text{
@@ -157,22 +169,7 @@ p{
     padding-bottom: 5%;
 }
 
-/*CTA Section*/
-#cta{
-    background-color: #ff4c68;
-    color: #FFFFFF;
-    text-align: center;
-    padding: 7% 15%;
-}
-
 /* Footer Section */
-
-#footer{
-    background-color: #FFFFFF;
-    text-align: center;
-    padding: 7% 15%;
-}
-
 .cc-icon{
     margin: 20px 10px;
 }
